--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,2 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600");
 @import "reset.css";
+@@import "giobal.css";
 @@import "header.css";
