--- a/CSS/header.css
+++ b/CSS/header.css
@@ -2,6 +2,8 @@
   background-color: #523737;
   color: white;
   padding: 5px 10px 15px 10px;
+  position: fixed;
+  width: 100%;
 }
 
 .top-header .header_top,
