--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,8 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600");
-@import "reset.css";
+@@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600");
+@@import "reset.css";
 @@import "giobal.css";
 @@import "header.css";
+@@import "navigation.css";
+@@import "search-bar.css";
+@@@import "firends.css";
+@@@import "chats.css";
